Added navbar to homepage

--- a/core/templates/upload.html
+++ b/core/templates/upload.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="{% static 'core/styles.css' %}">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar-links">
+          <a href="/">Home</a>
+          <a href="/privacy/">Privacy Policy</a>
+          <a href="/terms/">Terms of Use</a>
+        </div>
+      </nav>
+      
     <div class="gradient-bg text-center min-vh-100 d-flex flex-column justify-content-center align-items-center px-3">
         <img src="{% static 'core/highlighter.png' %}" alt="Logo" class="mb-2" width='48'>
         <h2 class="brand-name">HiLite</h2>
