--- a/core/templates/upload.html
+++ b/core/templates/upload.html
@@ -27,6 +27,11 @@
             <button type="submit" class="btn btn-primary px-4">Upload</button>
         </form>
 
+    {% if not request.session.notion_token %}
+        <a href="{% url 'connect_to_notion' %}" class="btn btn-outline-light mt-3">
+            Connect to Notion
+        </a>
+          
         {% if highlights %}
             <h3 class="mt-5 text-white">Extracted Highlights</h3>
             <ul class="list-group list-group-flush bg-white text-start w-75 mx-auto mt-3 shadow-sm rounded">
@@ -48,6 +53,7 @@
                 {% endfor %}
             </div>
         {% endif %}
+    {% endif %}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
