--- a/core/templates/upload.html
+++ b/core/templates/upload.html
@@ -41,6 +41,7 @@
 
         {% if not token %}
             <a href="{% url 'connect_to_notion' %}" class="btn btn-light mt-3">
+                <img src="{% static 'core/notion.png' %}" alt="Notion Logo" style="height: 20px; width: 20px; margin-right: 5px;">
                 Connect to Notion
             </a>
         {% endif %}
@@ -55,7 +56,10 @@
 
             <form method="post" action="{% url 'send_to_notion' %}" class="mt-4">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-success">Send to Notion</button>
+                <button type="submit" class="btn btn-light">
+                    <img src="{% static 'core/notion.png' %}" alt="Notion Logo" style="height: 20px; width: 20px; margin-right: 5px;">
+                    Send to Notion
+                </button>
             </form>
         {% endif %}
 
@@ -67,6 +71,26 @@
             </div>
         {% endif %}
     </div>
+
+    <footer class="footer mt-5">
+        <div class="d-flex align-items-center">
+            <img src="{% static 'core/highlighter.png' %}" alt="App Logo">
+            <span>HiLite</span>
+        </div>
+
+        <div class="footer-middle">
+            <span>Built by Leslie Osei-Anane</span>
+        </div>
+    
+        <div class="d-flex align-items-center">
+            <a href="https://github.com/lesprgm" target="_blank">
+                <img src="{% static 'core/github.png' %}" alt="GitHub Icon">
+            </a>
+            <a href="mailto:lesozzy@gmail.com">
+                <img src="{% static 'core/email.png' %}" alt="Email Icon">
+            </a>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'core/script.js' %}"></script>
