Added Google Tag for Analytics

--- a/core/templates/upload.html
+++ b/core/templates/upload.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>HiLite - Extract Highlights to Notion</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HNNKN9BEG5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HNNKN9BEG5');
+    </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'core/styles.css' %}">
 </head>
